<?xml version="1.0"?>
<package>
  <name>meshing</name>
  <version>0.0.0</version>
  <description>The path_planner package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


</package>
